--- a/SoundBump/Base.lproj/Main_iPhone.storyboard
+++ b/SoundBump/Base.lproj/Main_iPhone.storyboard
@@ -1,18 +1,61 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4451" systemVersion="13A461" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12F37" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3676"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
     </dependencies>
     <scenes>
-        <!--class Prefix:identifier View Controller-->
+        <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController id="vXZ-lx-hvc" customClass="SBViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="PSH-5E-icn"/>
+                        <viewControllerLayoutGuide type="bottom" id="a7T-eK-1AI"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eVX-kx-I7O">
+                                <rect key="frame" x="132" y="269" width="56" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.3295582426" green="1" blue="0.3605727594" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="56" id="9XZ-t7-xFX"/>
+                                </constraints>
+                                <state key="normal" title="Beat!">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="sendBeat:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="J3d-3n-sup"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bm7-2O-fNJ">
+                                <rect key="frame" x="79" y="307" width="162" height="105"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.66666666669999997" green="0.14652973380000001" blue="0.39106075200000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="105" id="Hkl-zQ-Y10"/>
+                                    <constraint firstAttribute="width" constant="162" id="j2m-Ir-9LJ"/>
+                                </constraints>
+                                <state key="normal" title="BOOM!">
+                                    <color key="titleColor" red="0.96223250680000005" green="0.50409448850000005" blue="0.093460313520000005" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="eVX-kx-I7O" secondAttribute="centerX" id="92i-ff-udP"/>
+                            <constraint firstAttribute="centerY" secondItem="eVX-kx-I7O" secondAttribute="centerY" id="9Em-RV-BS1"/>
+                            <constraint firstAttribute="centerX" secondItem="bm7-2O-fNJ" secondAttribute="centerX" id="NbP-iD-eEn"/>
+                            <constraint firstItem="bm7-2O-fNJ" firstAttribute="top" secondItem="eVX-kx-I7O" secondAttribute="bottom" constant="8" id="uPe-WH-UxP"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="BeatButton" destination="eVX-kx-I7O" id="NrV-Er-ryt"/>
+                        <outlet property="boomBox" destination="bm7-2O-fNJ" id="UbM-YL-bBo"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
